@@ -1,0 +1,5 @@
+<vector android:autoMirrored="true" android:height="24dp"
+    android:tint="#000000" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M13.49,5.48c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM10.32,17.48l0.57,-2.5 2.1,2v5c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-5.64c0,-0.55 -0.22,-1.07 -0.62,-1.45l-1.48,-1.41 0.6,-3c1.07,1.24 2.62,2.13 4.36,2.41 0.6,0.09 1.14,-0.39 1.14,-1 0,-0.49 -0.36,-0.9 -0.85,-0.98 -1.52,-0.25 -2.78,-1.15 -3.45,-2.33l-1,-1.6c-0.4,-0.6 -1,-1 -1.7,-1 -0.3,0 -0.5,0.1 -0.8,0.1L7.21,7.76c-0.74,0.32 -1.22,1.04 -1.22,1.85v2.37c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-2.4l1.8,-0.7 -1.6,8.1 -3.92,-0.8c-0.54,-0.11 -1.07,0.24 -1.18,0.78L3.09,17c-0.11,0.54 0.24,1.07 0.78,1.18l4.11,0.82c1.06,0.21 2.1,-0.46 2.34,-1.52z"/>
+</vector>
